when looking for a list, the function 'list-at-point' now takes an
optional argument to do so.


* Changes in Emacs 26.2 on Non-Free Operating Systems

** macOS features can now be detected at run-time as well as at
build-time.  See nextstep/INSTALL for details.
(This change was actually made in Emacs 26.1, but was undocumented and
not called out in its NEWS.)

+++
** New function 'logcount' calculates an integer's Hamming weight.


* Installation Changes in Emacs 26.1

** By default libgnutls is now required when building Emacs.
Use 'configure --with-gnutls=no' to build even when GnuTLS is missing.

** GnuTLS version 2.12.2 or later is now required, instead of merely
version 2.6.6 or later.

** The new option 'configure --with-mailutils' causes Emacs to rely on
GNU Mailutils to retrieve email.  It is recommended, and is the
default if GNU Mailutils is installed.  When --with-mailutils is not
in effect, the Emacs build procedure by default continues to build and
install a limited 'movemail' substitute that retrieves POP3 email only
via insecure channels; to avoid this problem, use either
--with-mailutils or --without-pop when configuring.

** The new option 'configure --enable-gcc-warnings=warn-only' causes
GCC to issue warnings without stopping the build.  This behavior is
now the default in developer builds.  As before, use
'--disable-gcc-warnings' to suppress GCC's warnings, and
'--enable-gcc-warnings' to stop the build if GCC issues warnings.

** When GCC warnings are enabled, '--enable-check-lisp-object-type' is
now enabled by default when configuring.

+++
** The Emacs server now has socket-launching support.  This allows
socket based activation, where an external process like systemd can
invoke the Emacs server process upon a socket connection event and
hand the socket over to Emacs.  Emacs uses this socket to service
emacsclient commands.  This new functionality can be disabled with the
configure option '--disable-libsystemd'.

+++